feat: regenerate from markdown

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/crawler.mjs",
   "scripts": {
     "crawl": "node src/index.mjs",
+    "regenerate": "node test/regenerate-markdown.mjs",
     "test": "node --test",
     "test:sample": "node --test test/sampler.mjs",
     "test:dedup": "node --test test/version-dedup-test.mjs",
